--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -65,7 +65,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html">Jacob Roelofsz</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
@@ -82,9 +82,9 @@
     </header>
     <!--/header-->
     <!--/#main-slider-->
-    <section>
+    <section id="aboutMe">
         <div class="container">
-            <img src="images/image_of_me.jpg" style="height: auto; padding: 0 310px;"/>
+            <img src="images/image_of_me.jpg" style="height: auto; padding: 0 310px; border-radius: 50%;"/>
         </div>
     </section>
     <section id="feature">
