--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Corlate</title>
+    <title>Home | Jacob Roelofsz</title>
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -43,12 +43,6 @@
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -70,9 +64,9 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">Resume</a></li>
+                        <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact-us.html">Contact Me</a></li>
+                        <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
