--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Corlate</title>
+    <title>Resume | Jacob Roelofsz</title>
 
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,9 +71,9 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="about-us.html">About Us</a></li>
+                        <li class="active"><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact-us.html">Contact</a></li>
+                        <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
