--- a/PersonalSite/contact-me.html
+++ b/PersonalSite/contact-me.html
@@ -30,7 +30,6 @@
 <!--/head-->
 
 <body>
-
     <header id="header">
         <div class="top-bar">
             <div class="container">
@@ -54,7 +53,6 @@
             <!--/.container-->
         </div>
         <!--/.top-bar-->
-
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
@@ -66,21 +64,62 @@
                     </button>
                     <a class="navbar-brand" href="index.html"><img src="#" alt="logo"></a>
                 </div>
-                
+
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="active"><a href="contact-me.html">Contact Me</a></li>                        
+                        <li class="active"><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
     </header><!--/header-->
-
-
-
+    <section id="contact-page">
+        <div class="container">
+            <div class="large-title text-center">
+                <h2>Drop Your Message</h2>
+                <p>All users on MySpace will know that there are millions of people out there. Every day <br> besides so many people joining this community.</p>
+            </div>
+            <div class="row contact-wrap">
+                <div class="status alert alert-success" style="display: none"></div>
+                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="form-group">
+                            <label>Name *</label>
+                            <input type="text" name="name" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Email *</label>
+                            <input type="email" name="email" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Phone</label>
+                            <input type="number" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Company Name</label>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label>Subject *</label>
+                            <input type="text" name="subject" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Message *</label>
+                            <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Submit Message</button>
+                        </div>
+                    </div>
+                </form>
+            </div><!--/.row-->
+        </div><!--/.container-->
+    </section><!--/#contact-page-->
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
@@ -99,7 +138,6 @@
         </div>
     </footer>
     <!--/#footer-->
-
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
