--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -15,6 +15,9 @@
     <link href="css/icomoon.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    
+    
+    <link href="css/custom.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -78,7 +81,7 @@
     <!--/#main-slider-->
     <section id="aboutMe">
         <div class="container">
-            <img src="images/image_of_me.jpg" style="height: auto; padding: 0 310px; border-radius: 50%;"/>
+            <img src="images/image_of_me.jpg" style="height: auto; padding: 0 310px; border-radius: 50%;" />
         </div>
     </section>
     <section id="feature">
@@ -142,82 +145,104 @@
         <!--/.container-->
     </section>
     <!--/#feature-->
-    <section id="recent-works">
+    <section id="team-area">
         <div class="container">
             <div class="center fadeInDown">
-                <h2>Recent Works</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2>My Centriq Teamates</h2>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-1.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team1.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>William McCarty</h4>
+                            <span class="desg">Web Devloper</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="http://william-mccarty.com/index.html" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team2.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>Isabelle Dean</h4>
+                            <span class="desg">UI/UX Designer</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="#"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-3.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-3.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team3.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>Mike Kennedy</h4>
+                            <span class="desg">UI/UX Designer</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="#"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-4.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-4.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team4.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>Edwin Gross</h4>
+                            <span class="desg">UI/UX Designer</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="#"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-5.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-5.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team5.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>Mable Schwartz</h4>
+                            <span class="desg">UI/UX Designer</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="#"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 single-work">
-                    <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/item-6.png" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/portfolio/item-6.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                <div class="col-md-4 col-sm-6 single-team">
+                    <div class="inner">
+                        <div class="team-img">
+                            <img src="images/team6.png" alt="">
+                        </div>
+                        <div class="team-content">
+                            <h4>Adele Washington</h4>
+                            <span class="desg">UI/UX Designer</span>
+                            <div class="team-social">
+                                <a class="fa fa-user" href="#"></a>
+                                <a class="fa fa-linkedin" href="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!--/.row-->
-            <div class="clearfix text-center">
-                <br>
-                <br>
-                <a href="#" class="btn btn-primary">Show More</a>
             </div>
         </div>
-        <!--/.container-->
     </section>
 
     <section id="middle" class="skill-area" style="background-image: url(images/partner-bg.png)">
@@ -234,8 +259,8 @@
                     <div class="progress-wrap">
                         <h3>JavaScript</h3>
                         <div class="progress">
-                            <div class="progress-bar  color1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 15%">
-                                <span class="bar-width">15%</span>
+                            <div class="progress-bar  color1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                                <span class="bar-width">50%</span>
                             </div>
                         </div>
                     </div>
@@ -375,5 +400,16 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
+
+    <!-- jQuery Scripts -->
+    <script type="text/javascript">
+        $(function () {
+            $("#tabs").tabs({
+                event: "mouseover"
+            });
+        });
+    </script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
