--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -17,6 +17,8 @@
     <link href="css/icomoon.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    <!-- Resume CSS -->
+    <link href="css/resume.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -31,7 +33,6 @@
 
 
 <body>
-
     <header id="header">
         <div class="top-bar">
             <div class="container">
@@ -55,7 +56,6 @@
             <!--/.container-->
         </div>
         <!--/.top-bar-->
-
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
@@ -65,9 +65,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="#" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html">Jacob Roelofsz</a>
                 </div>
-
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
@@ -82,12 +81,147 @@
         <!--/nav-->
     </header>
     <!--/header-->
-    
+    <!-- Resume -->
+
+    <div id="doc2" class="yui-t7">
+        <div id="inner">
+
+            <div id="hd">
+                <div class="yui-gc">
+                    <div class="yui-u first">
+                        <h1>Jacob Roelofsz</h1>
+                        <h2>Full Stack Web Developer</h2>
+                    </div>
+
+                    <div class="yui-u">
+                        <div class="contact-info">
+                            <h3><a href="mailto:jroelofsz@outlook.com">jroelofsz@outlook.com</a></h3>
+                            <h3>+1 (816)-825-2860</h3>
+                        </div><!--// .contact-info -->
+                    </div>
+                </div><!--// .yui-gc -->
+            </div><!--// hd -->
+
+            <div id="bd">
+                <div id="yui-main">
+                    <div class="yui-b">
+
+                        <div class="yui-gf">
+                            <div class="yui-u first">
+                                <h2>Profile</h2>
+                            </div>
+                            <div class="yui-u">
+                                <p class="enlarge">
+                                    Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change.
+                                </p>
+                            </div>
+                        </div><!--// .yui-gf -->
+
+                        <div class="yui-gf">
+                            <div class="yui-u first">
+                                <h2>Skills</h2>
+                            </div>
+                            <div class="yui-u">
+
+                                <div class="talent">
+                                    <h3>Web Design</h3>
+                                    <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.	</p>
+                                </div>
+
+                                <div class="talent">
+                                    <h3>Interface Design</h3>
+                                    <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
+                                </div>
+
+                                <div class="talent">
+                                    <h3>Project Direction</h3>
+                                    <p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
+                                </div>
+                            </div>
+                        </div><!--// .yui-gf -->
+                        <hr>
+                        <div class="yui-gf">
+                            <div class="yui-u first">
+                                <h2>Technical</h2>
+                            </div>
+                            <div class="yui-u">
+                                <ul class="talent">
+                                    <li>HTML5</li>
+                                    <li>CSS</li>
+                                    <li class="last">Javascript</li>
+                                </ul>
+
+                                <ul class="talent">
+                                    <li>Jquery</li>
+                                    <li>C#</li>
+                                    <li class="last">mySQL</li>
+                                </ul>
+
+                                <ul class="talent">
+                                    <li>MVC</li>
+                                    <li>Windows 10</li>
+                                    <li class="last">JSON</li>
+                                </ul>
+                            </div>
+                        </div><!--// .yui-gf-->
+
+                        <div class="yui-gf">
+
+                            <div class="yui-u first">
+                                <h2>Experience</h2>
+                            </div><!--// .yui-u -->
+
+                            <div class="yui-u">
+
+                                <div class="job">
+                                    <h2>Price Chopper</h2>
+                                    <h3>Sacker</h3>
+                                    <h4>2020-2021</h4>
+                                    <p>Assist customers in their shopping experience by sacking purchases and assisting in general store operation in the most efficient, friendly, and courteous manner possible. </p>
+                                </div>
+
+                                <div class="job">
+                                    <h2>Freddy's Frozen Custard &amp; Steakburgers</h2>
+                                    <h3>Cook</h3>
+                                    <h4>2017-2018</h4>
+                                    <p>On the HotLine, you learn the art of handcrafting the Freddy’s Steakburger. You are a member of the highly talented team that ensures each tasty menu offering is cooked to perfection. As you showcase your skills in the Freddy’s cooked-to-order kitchen, you see to it that quality, </p>
+                                </div>
+
+                                <div class="job">
+                                    <h2>Two Mikes Investmant LLC</h2>
+                                    <h3>General Laborer</h3>
+                                    <h4>2004-2005</h4>
+                                    <p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
+                                </div>
 
 
+                            </div><!--// .yui-u -->
+                        </div><!--// .yui-gf -->
 
 
+                        <div class="yui-gf last">
+                            <div class="yui-u first">
+                                <h2>Education</h2>
+                            </div>
+                            <div class="yui-u">
+                                <h3>Centriq Training</h3>
+                                <h4>Certification in Full Stack Web Development &mdash; <strong><!-- Add medals earned during centriq --></strong> </h4>
+                            </div>
+                        </div><!--// .yui-gf -->
 
+
+                    </div><!--// .yui-b -->
+                </div><!--// yui-main -->
+            </div><!--// bd -->
+
+            <div id="ft">
+                <p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+            </div><!--// footer -->
+
+        </div><!-- // inner -->
+
+
+    </div><!--// doc -->
 
 
 
@@ -103,13 +237,13 @@
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Faq</a></li>
                         <li><a href="#">Contact Us</a></li>
+
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
     <!--/#footer-->
-
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
