Added Resume page

--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -174,25 +174,25 @@
                             <div class="yui-u">
 
                                 <div class="job">
+                                    <h2>Two Mikes Investmant LLC</h2>
+                                    <h3>General Laborer</h3>
+                                    <h4>2018 - Present</h4>
+                                    <p>Assist with landscaping projects and remodeling on new properties. Learn how to approach a project and have to complete the project without tearing everything out. Learn how to be creative with solutios with little tools/accessibilty available to us.</p>
+                                </div>
+                                <div class="job">
                                     <h2>Price Chopper</h2>
                                     <h3>Sacker</h3>
-                                    <h4>2020-2021</h4>
+                                    <h4>2020 - 2021</h4>
                                     <p>Assist customers in their shopping experience by sacking purchases and assisting in general store operation in the most efficient, friendly, and courteous manner possible. </p>
                                 </div>
 
                                 <div class="job">
                                     <h2>Freddy's Frozen Custard &amp; Steakburgers</h2>
                                     <h3>Cook</h3>
-                                    <h4>2017-2018</h4>
+                                    <h4>2017 - 2018</h4>
                                     <p>On the HotLine, you learn the art of handcrafting the Freddy’s Steakburger. You are a member of the highly talented team that ensures each tasty menu offering is cooked to perfection. As you showcase your skills in the Freddy’s cooked-to-order kitchen, you see to it that quality, </p>
                                 </div>
 
-                                <div class="job">
-                                    <h2>Two Mikes Investmant LLC</h2>
-                                    <h3>General Laborer</h3>
-                                    <h4>2004-2005</h4>
-                                    <p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
-                                </div>
 
 
                             </div><!--// .yui-u -->
