--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -83,145 +83,125 @@
     <!--/header-->
     <!-- Resume -->
 
-    <div id="doc2" class="yui-t7">
-        <div id="inner">
-
-            <div id="hd">
-                <div class="yui-gc">
-                    <div class="yui-u first">
-                        <h1>Jacob Roelofsz</h1>
-                        <h2>Full Stack Web Developer</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="row align-items-center">
+                    <div class="col-lg-5">
+                        <div class="backgroundApplication">
+                            <div class="resume-base bg-primary user-dashboard-info-box p-4">
+                                <div class="profile">
+                                    <div class="jobster-user-info">
+                                        <div class="profile-avatar">
+                                            <img class="img-fluid " src="images/image_of_me.jpg" alt="">
+                                        </div>
+                                        <div class="profile-avatar-info mt-3">
+                                            <h5 class="text-white">Jacob Roelofsz</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="about-candidate border-top">
+                                    <div class="candidate-info">
+                                        <h6 class="text-white">Email:</h6>
+                                        <a class="text-white" href="mailto:jroelofsz@outlook.com">jroelofsz@outlook.com</a>
+                                    </div>
+                                    <div class="candidate-info">
+                                        <h6 class="text-white">Phone:</h6>
+                                        <p class="text-white"> +1 (816) 825-2860</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div class="col-lg-7">
+                        <div class="resume-experience">
+                            <div class="timeline-box">
+                                <h5 class="resume-experience-title">Education:</h5>
+                                <div class="jobster-candidate-timeline">
+                                    <div class="jobster-timeline-item">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2021-Pres</span>
+                                                <h6 class="mb-2">Centriq Training</h6>
+                                                <span>- Full Stack Web Development Training</span>
+                                                <p class="mt-2">4-month course that tought me the fundamentals of Full-Stack Web Development. During this course I learned how to create a website that has front-end, middle-tier, and back-end functionality.</p>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                    <div class="yui-u">
-                        <div class="contact-info">
-                            <h3><a href="mailto:jroelofsz@outlook.com">jroelofsz@outlook.com</a></h3>
-                            <h3>+1 (816)-825-2860</h3>
-                        </div><!--// .contact-info -->
+                                </div>
+                            </div>
+                            <div class="timeline-box mt-4">
+                                <h5 class="resume-experience-title">Work &amp; Experience:</h5>
+                                <div class="jobster-candidate-timeline">
+                                    <div class="jobster-timeline-item">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2018-Pres</span>
+                                                <h6 class="mb-2">Manual Laborer</h6>
+                                                <span>- Two Mikes Investmant Co LLC</span>
+                                                <p class="mt-2">Assist to property turnover renovations. During my expierence I learned how to come up with solutions with minimal access to the issue. Example: how to add an outlet without ripping out the whole wall.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="jobster-timeline-item mb-0">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2020-11 to 2021-5</span>
+                                                <h6 class="mb-2">Sacker</h6>
+                                                <span>- Price Chopper</span>
+                                                <p class="mt-2">Assist customers in their shopping experience by sacking purchases and assisting in general store operation in the most efficient, friendly, and courteous manner possible.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="timeline-box mt-4">
+                                <h5 class="resume-experience-title">Awards:</h5>
+                                <div class="jobster-candidate-timeline">
+                                    <div class="jobster-timeline-item">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2020-6-01 to 2020-6-01</span>
+                                                <h6 class="mb-2">Web Designer</h6>
+                                                <span>- Inwave Studio</span>
+                                                <p class="mt-2">One of the main areas that I work on with my clients is shedding these non-supportive beliefs and replacing them with beliefs that will help them to accomplish their desires.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="jobster-timeline-item mb-0">
+                                        <div class="jobster-timeline-cricle">
+                                            <i class="far fa-circle"></i>
+                                        </div>
+                                        <div class="jobster-timeline-info">
+                                            <div class="dashboard-timeline-info">
+                                                <span class="jobster-timeline-time">2020-6-01 to 2020-6-01</span>
+                                                <h6 class="mb-2">Secondary School Certificate</h6>
+                                                <span>- Engineering High School</span>
+                                                <p class="mt-2">Figure out what you want, put a plan together to achieve it, understand the cost, believe in yourself then go and get it!</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div><!--// .yui-gc -->
-            </div><!--// hd -->
-
-            <div id="bd">
-                <div id="yui-main">
-                    <div class="yui-b">
-
-                        <div class="yui-gf">
-                            <div class="yui-u first">
-                                <h2>Profile</h2>
-                            </div>
-                            <div class="yui-u">
-                                <p class="enlarge">
-                                    Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change.
-                                </p>
-                            </div>
-                        </div><!--// .yui-gf -->
-
-                        <div class="yui-gf">
-                            <div class="yui-u first">
-                                <h2>Skills</h2>
-                            </div>
-                            <div class="yui-u">
-
-                                <div class="talent">
-                                    <h3>Web Design</h3>
-                                    <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.	</p>
-                                </div>
-
-                                <div class="talent">
-                                    <h3>Interface Design</h3>
-                                    <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
-                                </div>
-
-                                <div class="talent">
-                                    <h3>Project Direction</h3>
-                                    <p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
-                                </div>
-                            </div>
-                        </div><!--// .yui-gf -->
-                        <hr>
-                        <div class="yui-gf">
-                            <div class="yui-u first">
-                                <h2>Technical</h2>
-                            </div>
-                            <div class="yui-u">
-                                <ul class="talent">
-                                    <li>HTML5</li>
-                                    <li>CSS</li>
-                                    <li class="last">Javascript</li>
-                                </ul>
-
-                                <ul class="talent">
-                                    <li>Jquery</li>
-                                    <li>C#</li>
-                                    <li class="last">mySQL</li>
-                                </ul>
-
-                                <ul class="talent">
-                                    <li>MVC</li>
-                                    <li>Windows 10</li>
-                                    <li class="last">JSON</li>
-                                </ul>
-                            </div>
-                        </div><!--// .yui-gf-->
-
-                        <div class="yui-gf">
-
-                            <div class="yui-u first">
-                                <h2>Experience</h2>
-                            </div><!--// .yui-u -->
-
-                            <div class="yui-u">
-
-                                <div class="job">
-                                    <h2>Two Mikes Investmant LLC</h2>
-                                    <h3>General Laborer</h3>
-                                    <h4>2018 - Present</h4>
-                                    <p>Assist with landscaping projects and remodeling on new properties. Learn how to approach a project and have to complete the project without tearing everything out. Learn how to be creative with solutios with little tools/accessibilty available to us.</p>
-                                </div>
-                                <div class="job">
-                                    <h2>Price Chopper</h2>
-                                    <h3>Sacker</h3>
-                                    <h4>2020 - 2021</h4>
-                                    <p>Assist customers in their shopping experience by sacking purchases and assisting in general store operation in the most efficient, friendly, and courteous manner possible. </p>
-                                </div>
-
-                                <div class="job">
-                                    <h2>Freddy's Frozen Custard &amp; Steakburgers</h2>
-                                    <h3>Cook</h3>
-                                    <h4>2017 - 2018</h4>
-                                    <p>On the HotLine, you learn the art of handcrafting the Freddy’s Steakburger. You are a member of the highly talented team that ensures each tasty menu offering is cooked to perfection. As you showcase your skills in the Freddy’s cooked-to-order kitchen, you see to it that quality, </p>
-                                </div>
-
-
-
-                            </div><!--// .yui-u -->
-                        </div><!--// .yui-gf -->
-
-
-                        <div class="yui-gf last">
-                            <div class="yui-u first">
-                                <h2>Education</h2>
-                            </div>
-                            <div class="yui-u">
-                                <h3>Centriq Training</h3>
-                                <h4>Certification in Full Stack Web Development &mdash; <strong><!-- Add medals earned during centriq --></strong> </h4>
-                            </div>
-                        </div><!--// .yui-gf -->
-
-
-                    </div><!--// .yui-b -->
-                </div><!--// yui-main -->
-            </div><!--// bd -->
-
-            <div id="ft">
-                <p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
-            </div><!--// footer -->
-
-        </div><!-- // inner -->
-
-
-    </div><!--// doc -->
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
