--- a/PersonalSite/portfolio.html
+++ b/PersonalSite/portfolio.html
@@ -30,7 +30,6 @@
 <!--/head-->
 
 <body>
-
     <header id="header">
         <div class="top-bar">
             <div class="container">
@@ -54,7 +53,6 @@
             <!--/.container-->
         </div>
         <!--/.top-bar-->
-
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
@@ -64,9 +62,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="#" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html">Jacob Roelofsz</a>
                 </div>
-
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
@@ -79,11 +76,7 @@
             <!--/.container-->
         </nav>
         <!--/nav-->
-
     </header>
-    <!--/header-->
-
-
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
@@ -103,7 +96,6 @@
         </div>
     </footer>
     <!--/#footer-->
-
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
