Added layout for classmates on index.html

--- a/PersonalSite/portfolio.html
+++ b/PersonalSite/portfolio.html
@@ -77,7 +77,111 @@
         </nav>
         <!--/nav-->
     </header>
+    <section id="portfolio">
+        <div class="container">
+            <div class="center">
+                <h2>Portfolio Projects</h2>
+            </div>
 
+            <ul class="portfolio-filter text-center">
+                <li><a class="btn btn-default active" href="#" data-filter="*">All Works</a></li>
+            </ul>
+            <!--/#portfolio-filter-->
+            <div class="row">
+                <div class="portfolio-items">
+                    <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/image_of_me.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item joomla bootstrap col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item bootstrap wordpress col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-3.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-3.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item joomla wordpress apps col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-4.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-4.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item joomla html bootstrap col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-5.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-5.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item wordpress html apps col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-1.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item joomla html bootstrap col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-6.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-6.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                    <div class="portfolio-item wordpress html apps col-xs-12 col-sm-4 col-md-3 single-work">
+                        <div class="recent-work-wrap">
+                            <img class="img-responsive" src="images/portfolio/item-2.png" alt="">
+                            <div class="overlay">
+                                <div class="recent-work-inner">
+                                    <a class="preview" href="images/portfolio/item-2.png" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.portfolio-item-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--/#portfolio-item-->
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
