--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -154,7 +154,7 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team1.png" alt="">
+                            <img src="images/class/billMcCarty.jpg" alt="Willaim McCarty" style="width: 100%; height: auto;">
                         </div>
                         <div class="team-content">
                             <h4>William McCarty</h4>
@@ -169,11 +169,11 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team2.png" alt="">
+                            <img src="#" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Isabelle Dean</h4>
-                            <span class="desg">UI/UX Designer</span>
+                            <h4>Teamate Name</h4>
+                            <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="#"></a>
                                 <a class="fa fa-linkedin" href="#"></a>
@@ -184,11 +184,11 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team3.png" alt="">
+                            <img src="#" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Mike Kennedy</h4>
-                            <span class="desg">UI/UX Designer</span>
+                            <h4>Teamate Name</h4>
+                            <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="#"></a>
                                 <a class="fa fa-linkedin" href="#"></a>
@@ -199,11 +199,11 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team4.png" alt="">
+                            <img src="#" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Edwin Gross</h4>
-                            <span class="desg">UI/UX Designer</span>
+                            <h4>Teamate Name</h4>
+                            <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="#"></a>
                                 <a class="fa fa-linkedin" href="#"></a>
@@ -214,11 +214,11 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team5.png" alt="">
+                            <img src="#" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Mable Schwartz</h4>
-                            <span class="desg">UI/UX Designer</span>
+                            <h4>Teamate Name</h4>
+                            <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="#"></a>
                                 <a class="fa fa-linkedin" href="#"></a>
@@ -229,11 +229,11 @@
                 <div class="col-md-4 col-sm-6 single-team">
                     <div class="inner">
                         <div class="team-img">
-                            <img src="images/team6.png" alt="">
+                            <img src="#" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>Adele Washington</h4>
-                            <span class="desg">UI/UX Designer</span>
+                            <h4>Teamate Name</h4>
+                            <span class="desg">Web Devloper</span>
                             <div class="team-social">
                                 <a class="fa fa-user" href="#"></a>
                                 <a class="fa fa-linkedin" href="#"></a>
