Added new image of me that is more profressional

--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -81,7 +81,7 @@
     <!--/#main-slider-->
     <section id="aboutMe">
         <div class="container">
-            <img src="images/image_of_me.jpg" style="height: auto; padding: 0 310px; border-radius: 50%;" />
+            <img src="images/class/ProfressionalProfilePic (1).jpg" style="height: auto; padding: 0 310px; border-radius: 50%;" />
         </div>
     </section>
     <section id="feature">
