--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -93,7 +93,7 @@
                                 <div class="profile">
                                     <div class="jobster-user-info">
                                         <div class="profile-avatar">
-                                            <img class="img-fluid " src="images/image_of_me.jpg" alt="">
+                                            <img class="img-fluid " src="images/class/ProfressionalProfilePic (1).jpg" alt="Jacob Roelofsz">
                                         </div>
                                         <div class="profile-avatar-info mt-3">
                                             <h5 class="text-white">Jacob Roelofsz</h5>
