--- a/PersonalSite/portfolio.html
+++ b/PersonalSite/portfolio.html
@@ -91,10 +91,10 @@
                 <div class="portfolio-items">
                     <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
-                            <img class="img-responsive" src="images/portfolio/item-1.png" alt="">
+                            <img class="img-responsive" src="images/thumbnails/FED1StudioThumb.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <a class="preview" href="images/image_of_me.jpg" rel="prettyPhoto"><i class="fa fa-plus"></i></a>
+                                    <a  href="http://wgaccounting.jacobroelofsz.com" target="_blank" style="color: white;">FED1StudioProject<br />Click to open in new tab</a>
                                 </div>
                             </div>
                         </div>
